# trait-tactics

./: Cargo.toml  README.md
macros/: Cargo.toml
macros/src/: binop.rs  lib.rs
src/: lib.rs
tests/: test.rs
