[workspace.package]
version = "0.1.0"
edition = "2021"

[package]
name = "trait-tactics"
version.workspace = true
edition.workspace = true

[dependencies]
num-traits = { version = "0.2.18", optional = true }
trait-tactics-macros = { path = "macros" }

[features]
num-traits = ["dep:num-traits", "trait-tactics-macros/num-traits"]
